fix jumping bug

--- a/src/components/TVShowList/style.module.css
+++ b/src/components/TVShowList/style.module.css
@@ -12,8 +12,13 @@
   display: flex;
   width: calc(100vw - 25px);
   overflow-x: hidden;
+}
+
+.tvshow_wrapper {
+  cursor: pointer;
+  padding-bottom: 17px;
   &:hover {
-    cursor: pointer;
     overflow: auto;
+    padding-bottom: 0px;
   }
 }
